<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreenActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/back_btn_style"
            android:contentDescription="@string/back_btn" />

        <View
            style="@style/greenEllipseStyle"
            android:layout_marginStart="-215dp"
            android:layout_marginTop="269dp" />

        <View
            style="@style/greenEllipseStyle"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="522dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/tv_title_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/tv_start_subtitle_style"
                android:text="@string/enter_credentials" />

            <EditText
                android:id="@+id/et_username"
                style="@style/et_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:hint="@string/username_hint" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/et_style"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/btn_style"
                android:text="@string/login_btn_text"
                app:cornerRadius="@dimen/btn_corner_radius" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/forgot_password" />

            <TextView
                android:id="@+id/link_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/or_create_new_account" />

        </LinearLayout>
    </FrameLayout>


</ScrollView>